--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
         <button class="btn btn-custom">Dowiedz się więcej</button>
     </div>
 
+    <div class="services">
+        <h1>Usługi</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet lacus sit amet velit
+            efficitur sollicitudin.</p>
+        <div class="container service-row">
+            <div class="row">
+                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
+                    <h3>Wybierz nas</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, dolore unde. Aliquid natus
+                        maiores dolorem tempore. Et eius similique tempore qui quas magnam magni, expedita recusandae
+                        neque labore eveniet quae.</p>
+                </div>
+                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
+                    <h3>Jakosc</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit accusantium asperiores vel nemo
+                        molestiae officiis, libero error architecto explicabo facilis saepe vero fugiat quibusdam
+                        obcaecati beatae ipsa dolor illum velit.</p>
+                </div>
+                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
+                    <h3>Niezawodnosc</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit laborum rerum laudantium
+                        nulla ducimus iusto cum amet, odio quod velit, asperiores consequatur placeat accusamus totam
+                        sapiente nemo, incidunt id.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
