--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Moja strona</a>
+                        <a class="nav-link" href="#">Strona Główna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Produkty</a>
+                        <a class="nav-link" href="#">Nasze Produkty</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
@@ -34,36 +34,96 @@
                 </ul>
             </div>
         </nav>
-        <h1>Miło Cię widzieć,<br> mamy piękne portfele!</h1>
-        <button class="btn btn-custom">Dowiedz się więcej</button>
+        <h1>Witamy na naszej stronie!<br> Oferujemy piękne portfele!</h1>
+        <button class="btn btn-custom">Zobacz więcej</button>
     </div>
 
     <div class="services">
-        <h1>Usługi</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet lacus sit amet velit
-            efficitur sollicitudin.</p>
+        <h1>Nasze Usługi</h1>
+        <p>Oferujemy szeroki zakres usług dostosowanych do Twoich potrzeb.</p>
         <div class="container service-row">
             <div class="row">
-                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                <div class="col-md-4 col-12 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
-                    <h3>Wybierz nas</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, dolore unde. Aliquid natus
-                        maiores dolorem tempore. Et eius similique tempore qui quas magnam magni, expedita recusandae
-                        neque labore eveniet quae.</p>
+                    <h3>Dlaczego My</h3>
+                    <p>Wybierz nas, aby skorzystać z najlepszych produktów na rynku.</p>
                 </div>
-                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                <div class="col-md-4 col-12 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
-                    <h3>Jakosc</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit accusantium asperiores vel nemo
-                        molestiae officiis, libero error architecto explicabo facilis saepe vero fugiat quibusdam
-                        obcaecati beatae ipsa dolor illum velit.</p>
+                    <h3>Jakość</h3>
+                    <p>Nasze produkty są wykonane z najwyższej jakości materiałów.</p>
                 </div>
-                <div class="col-md-4 service-item" style="flex: 0 0 32%; max-width: 32%;">
+                <div class="col-md-4 col-12 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
-                    <h3>Niezawodnosc</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit laborum rerum laudantium
-                        nulla ducimus iusto cum amet, odio quod velit, asperiores consequatur placeat accusamus totam
-                        sapiente nemo, incidunt id.</p>
+                    <h3>Niezawodność</h3>
+                    <p>Gwarantujemy niezawodność naszych produktów w każdej sytuacji.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="image-section text-center">
+        <h1 class="portfolio-header">Nasze Portfolio</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2018/10/31/14/56/bonis-leather-business-bag-3785982_960_720.jpg"
+                        alt="Obrazek 1">
+                    <div class="image-description">
+                        <h3 class="image-title">Elegancja</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellendus natus cumque
+                            ipsum repellat, id eveniet explicabo porro maiores nesciunt voluptas eius soluta sapiente,
+                            debitis delectus iure ullam quo quis.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2015/03/28/08/26/travel-leather-bags-695620_1280.jpg"
+                        alt="Obrazek 2">
+                    <div class="image-description">
+                        <h3 class="image-title">Sztuka</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, nesciunt accusamus nobis nemo
+                            et sequi ab earum officia ratione pariatur quis quas, totam beatae id possimus dolore?
+                            Similique, cupiditate doloremque?</p>
+                    </div>
+                </div>
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2017/07/27/20/47/scholarships-2546696_1280.jpg"
+                        alt="Obrazek 3">
+                    <div class="image-description">
+                        <h3 class="image-title">Wizja</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ut aliquid molestias
+                            laboriosam iste hic ipsam consequatur quo porro aspernatur! Voluptatem fuga ratione tenetur
+                            voluptas nostrum nesciunt consequatur ducimus sequi?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 4">
+                    <div class="image-description">
+                        <h3 class="image-title">Styl</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus doloribus ex consectetur
+                            ipsum nemo? Ex incidunt, eius officiis sunt dolorum pariatur quo voluptates distinctio
+                            itaque, a optio aperiam, qui minus?</p>
+                    </div>
+                </div>
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 5">
+                    <div class="image-description">
+                        <h3 class="image-title">Jakosc</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolore. Veniam dolore
+                            nulla modi iure, aliquam autem facilis suscipit nisi quod nam, tenetur ut hic esse beatae
+                            repellat ab odit.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 image-item">
+                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 6">
+                    <div class="image-description">
+                        <h3 class="image-title">Trwałość</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolore. Veniam dolore
+                            nulla modi iure, aliquam autem facilis suscipit nisi quod nam, tenetur ut hic esse beatae
+                            repellat ab odit.</p>
+                    </div>
                 </div>
             </div>
         </div>
