--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona z Bootstrap</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -13,10 +14,6 @@
 
     <div class="hero">
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -34,7 +31,7 @@
                 </ul>
             </div>
         </nav>
-        <h1>Witamy na naszej stronie!<br> Oferujemy piękne portfele!</h1>
+        <h1 id="slogan">Witamy na naszej stronie!<br> Oferujemy piękne portfele!</h1>
         <button class="btn btn-custom">Zobacz więcej</button>
     </div>
 
@@ -43,17 +40,17 @@
         <p>Oferujemy szeroki zakres usług dostosowanych do Twoich potrzeb.</p>
         <div class="container service-row">
             <div class="row">
-                <div class="col-md-4 col-12 service-item">
+                <div class="col-md-4 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
                     <h3>Dlaczego My</h3>
                     <p>Wybierz nas, aby skorzystać z najlepszych produktów na rynku.</p>
                 </div>
-                <div class="col-md-4 col-12 service-item">
+                <div class="col-md-4 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
                     <h3>Jakość</h3>
                     <p>Nasze produkty są wykonane z najwyższej jakości materiałów.</p>
                 </div>
-                <div class="col-md-4 col-12 service-item">
+                <div class="col-md-4 service-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Ikona usługi">
                     <h3>Niezawodność</h3>
                     <p>Gwarantujemy niezawodność naszych produktów w każdej sytuacji.</p>
@@ -72,8 +69,7 @@
                     <div class="image-description">
                         <h3 class="image-title">Elegancja</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellendus natus cumque
-                            ipsum repellat, id eveniet explicabo porro maiores nesciunt voluptas eius soluta sapiente,
-                            debitis delectus iure ullam quo quis.</p>
+                            ipsum repellat, id eveniet</p>
                     </div>
                 </div>
                 <div class="col-md-4 image-item">
@@ -82,8 +78,7 @@
                     <div class="image-description">
                         <h3 class="image-title">Sztuka</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, nesciunt accusamus nobis nemo
-                            et sequi ab earum officia ratione pariatur quis quas, totam beatae id possimus dolore?
-                            Similique, cupiditate doloremque?</p>
+                            et sequi ab earum offic</p>
                     </div>
                 </div>
                 <div class="col-md-4 image-item">
@@ -92,46 +87,46 @@
                     <div class="image-description">
                         <h3 class="image-title">Wizja</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ut aliquid molestias
-                            laboriosam iste hic ipsam consequatur quo porro aspernatur! Voluptatem fuga ratione tenetur
-                            voluptas nostrum nesciunt consequatur ducimus sequi?</p>
+                            laboriosam ipsa, veritatis dignissimos et officiis tempora.</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-4 image-item">
-                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 4">
+                    <img src="https://cdn.pixabay.com/photo/2018/10/31/14/56/bonis-leather-business-bag-3785982_960_720.jpg"
+                        alt="Obrazek 1">
                     <div class="image-description">
                         <h3 class="image-title">Styl</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus doloribus ex consectetur
-                            ipsum nemo? Ex incidunt, eius officiis sunt dolorum pariatur quo voluptates distinctio
-                            itaque, a optio aperiam, qui minus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, illum porro! Possimus
+                            aliquid sapiente sint veniam.</p>
                     </div>
                 </div>
                 <div class="col-md-4 image-item">
                     <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 5">
                     <div class="image-description">
-                        <h3 class="image-title">Jakosc</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolore. Veniam dolore
-                            nulla modi iure, aliquam autem facilis suscipit nisi quod nam, tenetur ut hic esse beatae
-                            repellat ab odit.</p>
+                        <h3 class="image-title">Elegancja</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, dignissimos!</p>
                     </div>
                 </div>
                 <div class="col-md-4 image-item">
-                    <img src="https://cdn.pixabay.com/photo/2014/06/13/01/17/wallet-367975_1280.jpg" alt="Obrazek 6">
+                    <img src="https://cdn.pixabay.com/photo/2018/10/31/14/56/bonis-leather-business-bag-3785982_960_720.jpg"
+                        alt="Obrazek 1">
                     <div class="image-description">
-                        <h3 class="image-title">Trwałość</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolore. Veniam dolore
-                            nulla modi iure, aliquam autem facilis suscipit nisi quod nam, tenetur ut hic esse beatae
-                            repellat ab odit.</p>
+                        <h3 class="image-title">Wyjątkowość</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, dolorem.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <footer>
+        <ul class="social-icons">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+    </footer>
+
 </body>
 
 </html>
