--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <h1 id="slogan">Witamy na naszej stronie!<br> Oferujemy piękne portfele!</h1>
-        <button class="btn btn-custom">Zobacz więcej</button>
+        <button type="button" class="btn btn-custom">Zobacz więcej</button>
     </div>
 
     <div class="services">
@@ -120,10 +120,10 @@
 
     <footer>
         <ul class="social-icons">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="#" aria-label="facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#" aria-label="twitter"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#" aria-label="instagram"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#" aria-label="youtobe"><i class="fab fa-youtube"></i></a></li>
         </ul>
     </footer>
 
